--- a/index.html
+++ b/index.html
@@ -1,58 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hackerthon</title>
-    <link rel="stylesheet" href="index.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js"
+    integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/1.0.21/jquery.csv.min.js"
+    integrity="sha512-Y8iWYJDo6HiTo5xtml1g4QqHtl/PO1w+dmUpQfQSOTqKNsMhExfyPN2ncNAe9JuJUSKzwK/b6oaNPop4MXzkwg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="script.js" type="text/javascript" defer></script>
+  <title>Load Google Sheet Data as CSV with jQuery</title>
+  <link rel="stylesheet" href="index.css" >
+  <link rel="stylesheet" href="font.css" >
 </head>
+
 <body>
-    <div class="wrapper bg-blue">
-        <div class="block-info">
-            <h2 title="block-title" class="h2-center">電力消耗</h2>
-            <p id="usage1" class="usage">本日消耗：16 度</p>
-            <p id="usage2" class="usage">昨日消耗：17 度</p>
-        </div>
-        <div class="block-info">
-            <h2 title="block-title" class="h2-center">水力消耗</h2>
-            <p id="usage3" class="usage">本日消耗：288 公升</p>
-            <p id="usage4" class="usage">昨日消耗：300 公升</p>
-        </div>
-        <div class="block-info">
-            <h2 title="block-title" class="h2-center">本日發電狀況</h2>
-            <p id="" class="usage">跑步機產生電壓：0 V</p>
-            <p id="" class="usage">太陽能板產生電壓：0 V</p>
-            <p id="" class="usage">冷氣溫差產生電壓：0 V</p>
-        </div>
-        <div class="block-info">
-            <h2 title="block-title" class="h2-center">運行電量排行</h2>
-            <p>用量排行</p>
-            <p>1. 冰箱</p>
-            <p>2. 冷氣</p>
-            <p>3. 電風扇</p>
-        </div>
-    </div>
-    <script>
-        function replaceNumber() {
-            for (var i = 1; i <= 4; i++) {
-                var usageElement = document.getElementById('usage' + i);
-                switch(i){
-                    case 1:
-                        usageElement.textContent = "今日消耗：" + (Math.floor(Math.random() * 20) + 2) + " 度";
-                        break;
-                    case 2:
-                        usageElement.textContent = "昨日消耗：" + (Math.floor(Math.random() * 20) + 2) + " 度";
-                        break;
-                    case 3:
-                        usageElement.textContent = "今日消耗：" + (Math.floor(Math.random() * 100) + 50) + " 公升"
-                        break;
-                    case 4:
-                        usageElement.textContent = "昨日消耗：" + (Math.floor(Math.random() * 20) + 50) + " 公升"
-                        break;
-                }
-            }
-        }
-        setInterval(replaceNumber, 5000);
-    </script>
+  <div class="banner">
+    
+  </div>
+  <div class="wrapper">
+    <div class="block-info">
+      <h2 title="block-title" class="h2-center font">是否釣到魚？</h2>
+      <p id="fish_catch_tag" class="usage font">initializing . . .</p>
+    </div>  
+    <div class="block-info">
+      <h2 title="block-title" class="h2-center font">資料？</h2>
+      <p id="" class="usage font">initializing . . .</p>
+    </div> 
+    <div class="block-info">
+      <h2 title="block-title" class="h2-center font">資料？</h2>
+      <p id="" class="usage font">initializing . . .</p>
+    </div> 
+    <div class="block-info">
+      <h2 title="block-title" class="h2-center font">資料？</h2>
+      <p id="" class="usage font">initializing . . .</p>
+    </div> 
+  </div>
+
+  <script>
+  
+  </script>
 </body>
 </html>
+
+<!--
+ Reference: 
+ [1-main]: https://www.youtube.com/watch?v=cRwpTv33Z_g
+ [1]: https://github.com/theotrain/load-google-sheet-as-csv-with-jquery
+
+ [2]: https://github.com/dean9703111/customer_feedback_form?tab=readme-ov-file
+-->
